# xz-modules

./: .gitignore  70ece36  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  rustfmt.toml
xz-agent/: CHANGELOG.md  Cargo.toml  README.md
xz-agent/examples/: pipeline_agent.rs  simple_agent.rs
xz-agent/src/: error.rs  lib.rs  traits.rs
xz-agent/src/action/: condition.rs  llm.rs  mod.rs  report.rs  web_search.rs
xz-agent/src/autonomous/: mod.rs
xz-agent/src/conversation/: mod.rs
xz-agent/src/executor/: dag.rs  mod.rs  retry.rs
xz-agent/src/fork/: mod.rs
xz-agent/src/safety/: guard.rs  mod.rs  types.rs
xz-agent/src/scheduler/: config.rs  memory.rs  mod.rs
xz-agent/src/tool/: mod.rs  registry.rs  traits.rs  types.rs
xz-agent/src/trajectory/: mod.rs
xz-agent/src/trigger/: cron.rs  event.rs  interval.rs  mod.rs
xz-agent/src/types/: agent.rs  agent_def.rs  mod.rs  result.rs  status.rs  step.rs
xz-agent/tests/: agent_integration_tests.rs  agent_memory_integration.rs  autonomous_e2e.rs  trigger_tests.rs
xz-embed/: Cargo.toml  README.md
xz-embed/examples/: basic_embedding.rs  metadata_search.rs  vector_store.rs
xz-embed/src/: batch_manager.rs  config.rs  error.rs  fusion.rs  lib.rs  traits.rs
xz-embed/src/embedder/: mock.rs  mod.rs  openai.rs
xz-embed/src/index/: builder.rs  mod.rs  trigger.rs
xz-embed/src/quantize/: mod.rs  product.rs  scalar.rs
xz-embed/src/store/: memory.rs  mod.rs  sqlite_vec.rs
xz-embed/src/types/: batch.rs  entry.rs  filter.rs  mod.rs  stats.rs
xz-embed/tests/: embedder_tests.rs  filter_tests.rs  store_tests.rs
xz-knowledge-graph/: Cargo.toml  README.md
xz-knowledge-graph/examples/: basic_knowledge_graph.rs  batch_import.rs  consistency_check.rs  graph_traversal.rs
xz-knowledge-graph/src/: config.rs  error.rs  lib.rs  traits.rs
xz-knowledge-graph/src/consistency/: circular.rs  duplicate.rs  expiration.rs  mod.rs  orphan.rs
xz-knowledge-graph/src/fts/: mod.rs  search.rs
xz-knowledge-graph/src/store/: memory.rs  mod.rs  sqlite.rs  sqlite_schema.rs
xz-knowledge-graph/src/traversal/: bfs.rs  cache.rs  mod.rs  path.rs
xz-knowledge-graph/src/types/: attribute.rs  confidence.rs  consistency.rs  entity.rs  graph.rs  import.rs  mod.rs  provenance.rs  query.rs  relation.rs
xz-knowledge-graph/tests/: batch_import.rs  consistency.rs  entity_crud.rs  graph_traversal.rs  relation_crud.rs
xz-memory/: Cargo.toml  README.md
xz-memory/examples/: basic_memory.rs  session_summary.rs  vector_search.rs
xz-memory/src/: config.rs  error.rs  lib.rs  traits.rs
xz-memory/src/domain/: character.rs  mod.rs  plot.rs  seed.rs  style.rs
xz-memory/src/fts/: search.rs
xz-memory/src/layer/: compaction.rs  mod.rs  short_term.rs  summary.rs
xz-memory/src/store/: memory.rs  mod.rs  sqlite.rs  sqlite_schema.rs
xz-memory/src/types/: fact.rs  message.rs  mod.rs  query.rs  session.rs  vector.rs
xz-memory/src/vector/: store.rs
xz-memory/tests/: compaction_tests.rs  export_import_tests.rs  fact_tests.rs  memory_system_tests.rs  session_tests.rs
xz-notification/: Cargo.toml  README.md
xz-notification/.github/workflows/: ci.yml
xz-notification/src/: error.rs  lib.rs  manager.rs  observability.rs  traits.rs  types.rs
xz-notification/src/channel/: mod.rs  system.rs  websocket.rs
xz-notification/src/preference/: dnd.rs  mod.rs  store.rs
xz-notification/src/queue/: mod.rs  priority_queue.rs
xz-notification/src/ratelimit/: limiter.rs  mod.rs
xz-notification/src/template/: engine.rs
xz-notification/tests/: integration_test.rs  ratelimit.rs  scaffold_test.rs
xz-provider/: Cargo.toml  README.md
xz-provider/src/: accumulator.rs  builder.rs  cancel.rs  config.rs  error.rs  key_source.rs  lib.rs  observability.rs  traits.rs
xz-provider/src/layer/: mod.rs  retry.rs
xz-provider/src/providers/: claude.rs  local.rs  mod.rs  openai.rs  sse.rs
xz-provider/src/router/: decision.rs  mod.rs  rule.rs
xz-provider/src/types/: cache.rs  message.rs  mod.rs  model_info.rs  request.rs  response.rs  tool.rs
xz-rag/: Cargo.toml  README.md
xz-rag/src/: engine.rs  error.rs  lib.rs  traits.rs
xz-rag/src/cache/: memory_cache.rs  mod.rs
xz-rag/src/channels/: bm25.rs  graph.rs  metadata.rs  mod.rs  semantic.rs
xz-rag/src/context/: citation.rs  mod.rs  token_budget.rs
xz-rag/src/generation/: mod.rs  stream.rs
xz-rag/src/indexing/: mod.rs
xz-rag/src/pipeline/: channel.rs  fusion.rs  mod.rs  normalize.rs
xz-rag/src/preprocessing/: expansion.rs  hyde.rs  mod.rs
xz-rag/src/types/: chunk.rs  config.rs  mod.rs  rag.rs  retrieval.rs
xz-rag/tests/: chunker_tests.rs  engine_tests.rs  pipeline_tests.rs  types_tests.rs
xz-rerank/: Cargo.toml  README.md
xz-rerank/examples/: basic_rerank.rs  multi_stage_rerank.rs
xz-rerank/src/: cache.rs  channel.rs  error.rs  lib.rs  multi_stage.rs  traits.rs
xz-rerank/src/local/: engine.rs  mod.rs
xz-rerank/src/providers/: cohere.rs  jina.rs  mock.rs  mod.rs
xz-rerank/src/signals/: keyword.rs  metadata.rs  mod.rs  quality.rs  recency.rs  vector_sim.rs
xz-rerank/src/types/: candidate.rs  config.rs  mod.rs  result.rs  weights.rs
xz-rerank/tests/: reranker_tests.rs  signal_tests.rs
xz-search/: Cargo.toml  README.md
xz-search/examples/: basic_search.rs  multi_engine.rs
xz-search/src/: batch.rs  error.rs  feedback.rs  lib.rs  near_dup.rs  rate_limiter.rs  traits.rs
xz-search/src/cache/: memory.rs  mod.rs
xz-search/src/engines/: mock.rs  mod.rs  serpapi.rs  (+1 more)
xz-search/tests/: dedup_tests.rs  router_tests.rs
xz-skill/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
xz-skill/examples/: register_skill.rs  wasm_skill.rs
xz-skill/src/: error.rs  lib.rs  traits.rs  validation.rs
xz-skill/tests/: permission_tests.rs  registry_tests.rs  runtime_tests.rs  skill_def_tests.rs
xz-tts/: Cargo.toml
xz-tts/src/: async_client.rs  async_types.rs  client.rs  credential.rs  error.rs  http_client.rs  lib.rs  observability.rs  pool.rs  preprocess.rs  protocol.rs  session.rs  traits.rs  types.rs  voices.rs
xz-tts/tests/: integration.rs  pool_tests.rs  protocol_tests.rs
(+97 files in other folders)
