[package]
name = "xz-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Agent scheduling system with DAG execution and multi-trigger support"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["agent", "ai", "scheduling", "orchestration", "dag"]
categories = ["development-tools", "asynchronous"]

[features]
default = []
code-exec = ["wasmtime"]
web-search = ["xz-search"]
web-extract = ["reqwest"]
skill-integration = ["xz-skill"]
system-notify = ["notify-rust"]

[dependencies]
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio-cron-scheduler = { workspace = true }
xz-provider = { workspace = true, optional = true }
xz-skill = { workspace = true, optional = true }
xz-search = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
notify-rust = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
