[package]
name = "xz-agent"
version = "0.2.0"
edition = "2024"
description = "Agent scheduling system with DAG execution and multi-trigger support"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio-cron-scheduler = "0.11"
chrono = { workspace = true }

# Dependencies
xz-provider = { workspace = true }
xz-memory = { workspace = true }
xz-knowledge-graph = { workspace = true }

# Optional dependencies
xz-skill = { workspace = true, optional = true }
xz-search = { path = "../xz-search", optional = true }
wasmtime = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
notify-rust = { version = "4", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
code-exec = ["wasmtime"]
web-search = ["xz-search"]
web-extract = ["reqwest"]
skill-integration = ["xz-skill"]
system-notify = ["notify-rust"]
