[package]
name = "xz-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Text embedding and vector storage abstraction layer"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["embedding", "vector", "ai", "nlp", "semantic-search"]
categories = ["science", "database-implementations"]

[features]
default = ["sqlite-vec"]
sqlite-vec = ["dep:sqlx"]
openai = ["dep:reqwest"]

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = { workspace = true }
