[package]
name = "xz-embed"
version = "0.1.0"
edition = "2024"
description = "文本向量嵌入与向量存储抽象层"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["rt", "sync", "macros"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "v7"] }
reqwest = { version = "0.12", features = ["json"], optional = true }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"

[features]
default = ["sqlite-vec"]
sqlite-vec = ["dep:sqlx"]
openai = ["dep:reqwest"]
