[package]
name = "xz-knowledge-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Structured knowledge graph storage engine with graph traversal"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["knowledge-graph", "graph", "ai", "entity", "relationship"]
categories = ["data-structures", "database-implementations"]

[features]
default = []
test-utils = []

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = { workspace = true }
