[package]
name = "xz-knowledge-graph"
version = "0.1.0"
edition = "2024"
description = "Structured knowledge graph storage engine with graph traversal"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["rt", "sync", "macros"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "v7"] }
time = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"

[features]
default = []
test-utils = []
