[package]
name = "xz-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Layered memory storage engine — working, short-term, long-term, core memory"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["memory", "ai", "conversation", "context", "agent"]
categories = ["data-structures", "database-implementations"]

[features]
default = ["summary"]
summary = ["xz-provider"]
vector-memory = ["xz-embed"]
test-utils = []

[dependencies]
tokio = { workspace = true, features = ["macros"] }
async-trait = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
xz-provider = { workspace = true, optional = true }
xz-embed = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = { workspace = true }
