[package]
name = "xz-memory"
version = "0.1.0"
edition = "2024"
description = "Layered memory storage engine — short-term, summary, fact, vector"

[dependencies]
tokio = { version = "1.0", features = ["rt", "sync", "macros"] }
async-trait = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "v7"] }

# Optional dependencies
xz-provider = { path = "../xz-provider", optional = true }
xz-embed = { path = "../xz-embed", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"

[features]
default = ["summary"]
summary = ["xz-provider"]
vector-memory = ["xz-embed"]
test-utils = []
