[package]
name = "xz-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Unified LLM provider abstraction — OpenAI, Claude, Ollama with one-liner config"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["llm", "ai", "provider", "openai", "claude", "ollama"]
categories = ["api-bindings", "asynchronous"]

[features]
default = ["openai"]
openai = []
claude = []
local = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "time"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde_yaml = { workspace = true }
regex-lite = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { version = "1", features = ["rt", "macros"] }

[lints.rust]
unsafe_code = "forbid"
