[package]
name = "xz-provider"
version = "0.1.7"
edition = "2024"
rust-version = "1.85"
description = "LLM 服务提供者抽象层 — 统一的 LLM 服务提供者接口"
authors = ["xiao-zhu team"]
license = "MIT OR Apache-2.0"

[features]
default = ["openai"]
openai = []
claude = []
local = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = { workspace = true }
tokio = { version = "1", features = ["fs", "time", "sync"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_yaml = "0.9"
regex-lite = "0.1"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "macros"] }

[lints.rust]
unsafe_code = "forbid"
