[package]
name = "xz-rag"
version = "0.1.0"
edition = "2024"
description = "Multi-channel Retrieval-Augmented Generation engine"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["rt", "sync", "macros"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = { workspace = true }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "v7"] }

# Local dependencies
xz-embed = { path = "../xz-embed" }
xz-rerank = { path = "../xz-rerank", optional = true }
xz-provider = { path = "../xz-provider", optional = true }

# Caching
moka = { version = "0.12", optional = true, features = ["future"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
bm25 = []
rerank = ["dep:xz-rerank"]
llm-generation = ["dep:xz-provider"]
hyde = ["dep:xz-provider"]
query-expansion = ["dep:xz-provider"]
caching = ["dep:moka"]
