[package]
name = "xz-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "External search abstraction — multi-engine aggregation + content extraction"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["search", "web", "ai", "agent", "aggregation"]
categories = ["api-bindings", "web-programming"]

[features]
default = []
tavily = ["dep:reqwest"]
serpapi = ["dep:reqwest"]
jina = ["dep:reqwest"]

[dependencies]
tokio = { workspace = true, features = ["time"] }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, optional = true }
tokio-util = { workspace = true, features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = { workspace = true }
