[package]
name = "xz-search"
version = "0.1.0"
edition = "2024"
description = "外部搜索抽象层 — 多引擎聚合路由 + 内容提取"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["rt", "sync", "time", "macros"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
tracing = "0.1"
percent-encoding = { workspace = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
wiremock = "0.6"

[features]
default = []
tavily = ["dep:reqwest"]
serpapi = ["dep:reqwest"]
jina = ["dep:reqwest"]
