[package]
name = "xz-skill"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Skill plugin system — registration, execution, and sandbox"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["skill", "plugin", "ai", "agent", "tool-calling"]
categories = ["development-tools", "asynchronous"]

[features]
default = ["wasm-runtime"]
wasm-runtime = ["wasmtime"]
http-tool = ["reqwest"]
sqlite-registry = ["sqlx"]
hot-reload = ["notify"]
test-utils = []

[dependencies]
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
notify = { workspace = true, optional = true }
xz-provider = { workspace = true }
wasmtime = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = { workspace = true }
