[package]
name = "xz-skill"
version = "0.2.0"
edition = "2024"
description = "Skill plugin system — skill registration, execution, and sandbox"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
uuid = { workspace = true }
base64 = "0.22"
notify = { version = "6", optional = true }
xz-provider = { path = "../xz-provider" }

# Optional dependencies
wasmtime = { version = "20", optional = true }
reqwest = { version = "0.12", optional = true }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"], optional = true }

[features]
default = ["wasm-runtime"]
wasm-runtime = ["wasmtime"]
http-tool = ["reqwest"]
sqlite-registry = ["sqlx"]
hot-reload = ["notify"]
test-utils = []

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"

[lints]
workspace = true
