[package]
name = "xz-tts"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "火山引擎流式语音合成抽象层 — 统一的 TTS 接口，首期接入豆包语音合成模型2.0"
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["volcengine"]
volcengine = ["dep:tokio-tungstenite", "dep:uuid"]
phoneme-timestamps = []
voice-mix = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, optional = true }
log = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }

[lints.rust]
unsafe_code = "forbid"
